--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap-icons": "^1.11.3",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
